[package]
name = "tax-calc"
version = "0.1.0"
authors = ["Rahul Thomas <rapidclock@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
clap = "2.33.1"